<resources>
    <string name="app_name">BIM5D</string>
    <string name="userNameHitText">请输入用户名</string>
    <string name="passwordHitText">请输入密码</string>
    <string name="logButtonText">登陆</string>
    <string name="visitorLoginButtonText">游客登录</string>
    <string name="title_activity_simple_control">SimpleControlActivity</string>

    <string name="simpleControlButtonText">简单控件</string>
    <string name="seniorControlButtonText">高级控件</string>
    <string name="layoutButtonText">页面布局</string>
    <string name="multiActivityButtonText">多页面管理</string>
    <string name="networkButtonText">网络请求</string>
    <string name="sqliteButtonText">本地存储SQLite</string>


    <string name="radioButtonText">RadioButton</string>
    <string name="checkboxButtonText">CheckBoxButton</string>
    <string name="menuButtonText">MenuButton</string>

    <string name="autocompletion">Autocompletion</string>
    <string name="listView">ListView</string>
    <string name="adapter">Adapter</string>
    <string name="gridView">GridView</string>
    <string name="spinner">Spinner</string>
    <string name="gallary">Gallary</string>
    <string name="scrollView">ScrollView</string>
    <string name="dialog">Dialog</string>
    <string name="customList">CustomList</string>

    <string name="autoText">autoText</string>
    <string name="multiautoText">multiautoText</string>

    <string name="s_view_btn">点我吧</string>

    <string name="normalDialog">NormalDialog</string>
    <string name="multiBtnDialog">MultiBtnDialog</string>
    <string name="listDialog">ListDialog</string>
    <string name="singleChoiceDialog">SingleChoiceDialog</string>
    <string name="multiChoiceDialog">MultiChoiceDialog</string>
    <string name="waitingDialog">WaitingDialog</string>
    <string name="progressDialog">ProgressDialog</string>
    <string name="inputDialog">InputDialog</string>
    <string name="customizeDialog">CustomizeDialog</string>

    <string name="linearLayout">LinearLayout</string>
    <string name="relativeLayout">RelativeLayout</string>
    <string name="frameLayout">FrameLayout</string>
    <string name="tableLayout">TableLayout</string>

    <string name="secondActivityButtonText">go to Second</string>

    <string name="action_settings">Settings</string>
    <string name="item_top_left_title">出借金额(元)</string>
    <string name="item_top_title">产品名称</string>
    <string name="item_top_center_title">预期收益(元)</string>
    <string name="item_top_right_title">到期日</string>

    <string name="hellosqlite">Hello World,SqliteActivity.</string>

    <string-array name="number_array">
        <item>1000</item>
        <item>2000</item>
        <item>3000</item>
        <item>4000</item>
        <item>5000</item>
        <item>6000</item>
        <item>7000</item>
        <item>8000</item>
        <item>9000</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
