<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ruyu.haidihan.helloworldtext.RootActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >
        <Button
            android:id="@+id/simpleControlButton"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:text="@string/simpleControlButtonText"
            android:layout_gravity="center" />
        <Button
            android:id="@+id/seniorControlButton"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:text="@string/seniorControlButtonText"
            android:layout_gravity="center" />
        <Button
            android:id="@+id/layoutButton"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:text="@string/layoutButtonText"
            android:layout_gravity="center" />
        <Button
            android:id="@+id/mutilActivityManageButton"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:text="@string/multiActivityButtonText"
            android:layout_gravity="center" />
        <Button
            android:id="@+id/networkButton"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:text="@string/networkButtonText"
            android:layout_gravity="center" />
        <Button
            android:id="@+id/sqliteButton"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:text="@string/sqliteButtonText"
            android:layout_gravity="center" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
