<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ruyu.haidihan.helloworldtext.LayoutActivity.LayoutViewActivity">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >
        <Button
            android:id="@+id/linearLayoutButton"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:text="@string/linearLayout"
            android:layout_gravity="center" />
        <Button
            android:id="@+id/relativeLayoutButton"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:text="@string/relativeLayout"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/frameLayoutButton"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:text="@string/frameLayout"
            android:layout_gravity="center" />
        <Button
            android:id="@+id/tableLayoutButton"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:text="@string/tableLayout"
            android:layout_gravity="center" />


    </LinearLayout>
</android.support.constraint.ConstraintLayout>
